# pandda_2_gemmi

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  setup.sh
_gemmi/: .clang-tidy  setup.py
_gemmi/python/: custom.cpp  grid.cpp  sf.cpp
dep/: run_panddas.py
dep/tests/: dep_test_sparse_dmap_stream.py
docs/: debugging.md
pandda_gemmi/: analyse.py  analyse_2.py  analyse_interface.py  autobuild.py  autobuild_pandda_results.py  cluster.py  config.py  constants.py  crystalographic_types.py  logs.py  pandda.py  pandda_2.sh  pandda_exceptions.py  pandda_functions.py  pandda_rhofit.sh  pandda_types.py  processing.py  python_types.py  ranking.py  run_process_shell.py  types.py  validators.py
pandda_gemmi/alignment/: __init__.py  alignment.py  dframe.py
pandda_gemmi/analyse_cryoem_lib/: __init__.py
pandda_gemmi/analyse_lib/: __init__.py  generate_fragment_bound_structures.py  get_alignments.py  get_analyse_functions.py  get_autobuild_results.py  get_comparators.py  get_data_quality_filtered_datasets.py  get_datasets.py  get_datasets_smoother.py  get_event_classifications.py  get_event_ranking.py  get_event_sites.py  get_event_table.py  get_fs_model.py  get_grid.py  get_reference.py  get_reference_compatability_filtered_datasets.py  get_rescored_events.py  get_shell_results.py  get_shells.py  get_site_table.py  get_structure_factors.py  handle_exception.py  summarize_run.py
pandda_gemmi/args/: __init__.py  args.py
pandda_gemmi/autobuild/: __init__.py  autobuild.py  autobuild_inbuilt.py  cif.py  inbuilt.py  merge.py  pandda_rhofit.sh  preprocess_dmap.py  preprocess_structure.py  rhofit.py  score_build.py
pandda_gemmi/clustering/: __init__.py  local.py
pandda_gemmi/cnn/: __init__.py  base.py  build.py  constants.py  event.py  interfaces.py  model_ligand.pt  resnet.py
pandda_gemmi/common/: __init__.py  caching.py  debug.py  delayed.py  dtag.py  event_id.py  partial_func.py  positions_array.py  site_id.py  update_log.py
pandda_gemmi/comparators/: __init__.py  comparators.py  filter_compatible_structures.py  filter_exclude.py  filter_no_ligand_data.py  filter_only_datasets.py  filter_r_free.py  filter_range.py  filter_resolution.py  (+8 more)
scripts/: all_tests.py  generate_event_maps.py  get_background_distribution.py  get_background_distribution_ligands.py  install_model.py  pandda.py  pandda2.analyse  pandda_analyse_gui.sh  pandda_review.py  pandda_review_gui.py  pandda_run.sh  pandda_run.sh.py  plot_global_noise_vs_ligand_signal.py  plot_ligand_cross_sections.py  postrun.py  prepare_pandda_from_cryoem.py  process_dataset.py
tests/: analyse_traced.py  conftest.py  precission_recall_vs_fragalysis.py  rename_pdb_and_mtzs.py  run_panddas.py  test_autobuild.py  test_cnn.py  test_cut_maps.py  test_event_scoring.py  test_pandda.py  test_pandda_BAZ2BA.py  test_spec.yaml
(+199 files in other folders)
