[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandda_2_gemmi"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
]
description = "Tools to generate data suitable for loading into Fragalysis"
dependencies = [
    "numpy",
    "scipy",
    "joblib",
    "scikit-learn",
    "umap-learn",
    "hdbscan",
    "matplotlib",
    "rich",
    "seaborn",
    "rdkit",
    "ray",
    "scikit-learn-intelex",
    "fire",
    "bokeh",
    "dask",
    "dask-jobqueue",
    "torch==1.13.1"
] # Add project dependencies here, e.g. ["click", "numpy"]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-x"
testpaths = ['tests']

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]